--- a/src/assets/styles/_fonts.scss
+++ b/src/assets/styles/_fonts.scss
@@ -14,8 +14,8 @@
 
 @font-face {
   font-family: "Stetica";
-  src: url("@/assets/fonts/SteticaRegular.otf") format("opentype");
-  font-weight: 400;
+  src: url("@/assets/fonts/SteticaMedium.otf") format("opentype");
+  font-weight: 500;
   font-style: normal;
 }
 
@@ -24,6 +24,13 @@
   src: url("@/assets/fonts/SteticaMediumItalic.otf") format("opentype");
   font-weight: 500;
   font-style: italic;
+}
+
+@font-face {
+  font-family: "Stetica";
+  src: url("@/assets/fonts/SteticaRegular.otf") format("opentype");
+  font-weight: 400;
+  font-style: normal;
 }
 
 @font-face {
@@ -42,7 +49,7 @@
 
 @font-face {
   font-family: "Cormorant";
-  src: url("@/assets/fonts/CormorantMediumRegular.ttf") format("truetype");
+  src: url("@/assets/fonts/CormorantMediumItalic.ttf") format("truetype");
   font-weight: 500;
   font-style: italic;
 }
