--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,6 +1,9 @@
 @use "colors" as *;
 @import "fonts";
 @import "burger";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 html, body {
   background-color: #F5F5F5;
