--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,9 +1,6 @@
 @use "colors" as *;
 @import "fonts";
 @import "burger";
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
 
 html, body {
   background-color: #F5F5F5;
@@ -13,6 +10,7 @@ html, body {
   color: $black-color;
   font-family: "Stetica";
   font-weight: 400;
+  line-height: 1;
 }
 
 #app {
