feat(Mobile) - adjust first & second sections

--- a/src/assets/styles/typo.scss
+++ b/src/assets/styles/typo.scss
@@ -3,8 +3,8 @@
   font-weight: 400;
   font-size: 35px;
 
-  @media (max-width: 767px) {
-    font-size: 28px;
+  @media (max-width: 768px) {
+    font-size: 4.95vw;
   }
 }
 
