feat(UiCircle) - adjust ui circle

--- a/src/assets/styles/typo.scss
+++ b/src/assets/styles/typo.scss
@@ -135,11 +135,13 @@
   }
 
   @media (max-width: 767px) {
-    font-size: 14px;
+    // font-size: ;
+    // font-size: 14px;
   }
 
   @media (max-width: 549px) {
-    font-size: 12px;
+    font-size: 3.84vw;
+    // font-size: 12px;
   }
 }
 
