--- a/src/assets/styles/typo.scss
+++ b/src/assets/styles/typo.scss
@@ -94,6 +94,7 @@
   font-family: "Stetica";
   font-size: 1.82vw;
   font-weight: 700;
+  line-height: 1.1em;
   font-style: normal;
   letter-spacing: -0.04em;
 
@@ -106,11 +107,7 @@
   }
 
   @media (max-width: 767px) {
-    font-size: 18px;
-  }
-
-  @media (max-width: 549px) {
-    font-size: 16px;
+    font-size: 3.75vw;
   }
 }
 
